Fix styles and add filtering preloader
This commit adds a preloader when applying filters or resetting them.
Also, the title from the main page with a list of component categories
is removed, and extra space from the header which caused horizontal
scrolling is fixed. API now has to be launched manually as before.

--- a/static/css/home_styles.css
+++ b/static/css/home_styles.css
@@ -6,6 +6,7 @@
     padding-left: 20px;
     box-shadow: rgb(0 0 0 / 10%) 0px 4px 10px;
     margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .center_wrap {
