--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -422,7 +422,7 @@ button {
 
 .filter {
 	margin-bottom: 15px;
-  box-shadow: rgb(0 0 0 / 10%) 0px 4px 10px;
+  box-shadow: rgb(0 0 0 / 30%) 0px 4px 10px;
   /* border: 1px solid #999; */
   border-radius: 4px;
 }
@@ -955,7 +955,15 @@ input[type=radio]:checked + span:before {
 
 
 .load_preloader {
-    height: 40px;
+    /*height: 40px;
     background: repeat-x url(../images/items_loading.gif) #fff;
-    background-position-y: top;
+    background-position-y: top;*/
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    opacity: 0.5;
+    background: center no-repeat url(../images/loading.gif) #fff;
 }
